<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.8.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>com.example.mngsys</groupId>
    <artifactId>example-mngsys</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>example-mngsys</name>
    <description>Example management system multi-module project</description>

    <properties>
        <java.version>1.8</java.version>
    </properties>

    <modules>
        <module>common-utils</module>
        <module>redis-event-notify-api</module>
        <module>auth-server</module>
        <module>portal-server</module>
        <module>gateway-server</module>
    </modules>
</project>
